perf(django): reimplement django simple with concurrency (#2686)
* perf(django): reimplement django simple with concurrency

* only run concurrent with threaded worker

* remove index.html

* remove unnecessary files

* Update benchmarks/django_simple/scenario.py

Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>

* increase concurrency

* fix flake8

Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/benchmarks/base/Dockerfile
+++ b/benchmarks/base/Dockerfile
@@ -16,7 +16,9 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   # ddtrace includes c extensions
   build-essential \ 
   # uuid is used to generate identifier for run if one is not provided
-  uuid-runtime \ 
+  uuid-runtime \
+  # provides ab for testing
+  apache2-utils \
   # cleaning up unused files
   && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
   && rm -rf /var/lib/apt/lists/*
