ci(coverage): re-enable coverage (#2468)
* ci(coverage): re-enable coverage

This PR is an attempt at re-enabling coverage support in CI after its
disabling in #2414.

* disable coverage for just profile

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,7 @@ commands:
         default: ""
       store_coverage:
         type: boolean
-        default: false
+        default: true
     steps:
       - attach_workspace:
           at: .
@@ -192,7 +192,7 @@ commands:
         default: ""
       store_coverage:
         type: boolean
-        default: false
+        default: true
     steps:
       - checkout
       - setup_tox
@@ -349,7 +349,7 @@ jobs:
       # DEV: "--ignore-errors" to skip over files that are missing
       - run: coverage report --ignore-errors --omit=ddtrace/
       # Print diff-cover report to stdout (compares against origin/master)
-      - run: diff-cover coverage.xml
+      - run: diff-cover --compare-branch origin/master coverage.xml
 
   build_base_venvs:
     executor: ddtrace_dev
@@ -394,6 +394,7 @@ jobs:
     parallelism: 6
     steps:
       - run_tox_scenario:
+          store_coverage: false
           pattern: '^py..-profile'
 
   integration_agent5:
@@ -1067,4 +1068,4 @@ workflows:
       - wsgi: *requires_base_venvs
 
       # Final reports
-      # - coverage_report: *requires_tests
+      - coverage_report: *requires_tests
