--- a/tox.ini
+++ b/tox.ini
@@ -109,6 +109,7 @@ extras =
 
 deps =
     cython
+    pytest-cov
     pytest-mock
     opentracing
 # test dependencies installed in all envs
@@ -304,13 +305,14 @@ passenv=
 commands =
 # run only essential tests related to the tracing client
     tracer: pytest {posargs} tests/tracer
-    profile: python -m tests.profiling.run pytest --capture=no --verbose --benchmark-disable {posargs} tests/profiling
+    # Coverage is excluded from profile because of an issue with Python 3.5.
+    profile: python -m tests.profiling.run pytest --no-cov --capture=no --verbose --benchmark-disable {posargs} tests/profiling
 # run only the opentrace tests
     opentracer: pytest {posargs} tests/opentracer/core
     opentracer_asyncio: pytest {posargs} tests/opentracer/test_tracer_asyncio.py
     opentracer_tornado-tornado{40,41,42,43,44}: pytest {posargs} tests/opentracer/test_tracer_tornado.py
     opentracer_gevent: pytest {posargs} tests/opentracer/test_tracer_gevent.py
-    integration-{v5,latest,snapshot}: pytest {posargs} tests/integration/
+    integration-{v5,latest,snapshot}: pytest --no-cov {posargs} tests/integration/
 # Contribs
     aiobotocore_contrib: pytest {posargs} tests/contrib/aiobotocore
     aiohttp_contrib: pytest {posargs} tests/contrib/aiohttp
@@ -359,9 +361,7 @@ ignore_outcome=true
 # DEV: We use `conftest.py` as a local pytest plugin to configure hooks for collection
 [pytest]
 # --cov-report is intentionally empty else pytest-cov will default to generating a report
-# DEV: cov report is being disabled as it tries to analyze .so objects in CI runs
-# addopts = -p tests.cache.conftest --cov=ddtrace/ --cov=tests/ --cov-append --cov-report= --durations=10 --junitxml=test-results/junit.xml
-addopts = -p tests.cache.conftest --durations=10 --junitxml=test-results/junit.xml
+addopts = -p tests.cache.conftest --cov=ddtrace/ --cov=tests/ --cov-append --cov-report= --durations=10 --junitxml=test-results/junit.xml
 # DEV: The default is `test_*\.py` which will miss `test.py` files
 python_files = test*\.py
 filterwarnings =
