[django] Add support for urlconf changes from middleware (#1365)
* [django] Add support for urlconf changes from middleware

* update implementation

* add resolve note

* ensure we always call _after_request_tags

* fix flake8 issues

* fix isort

* remove old django migration config

* Update releasenotes/notes/fix-django-resource-name-when-urlconf-changes-3daea582df79fcb6.yaml

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>

* use pytest.mark instead

* enable snapshots in circleci

* Update ddtrace/contrib/django/utils.py

Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>

* Update ddtrace/contrib/django/utils.py

* s/dir/dict/ :facepalm:

Co-authored-by: Kyle Verhoog <kyle@verhoog.ca>
Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -579,6 +579,13 @@ jobs:
           snapshot: true
           docker_services: "memcached redis postgres"
 
+  django_hosts:
+    <<: *machine_executor
+    steps:
+      - run_test:
+          pattern: 'django_hosts$'
+          snapshot: true
+
   djangorestframework:
     <<: *machine_executor
     parallelism: 6
@@ -938,6 +945,7 @@ requires_tests: &requires_tests
     - ddtracerun
     - dogpile_cache
     - django
+    - django_hosts
     - djangorestframework
     - elasticsearch
     - falcon
@@ -1019,6 +1027,7 @@ workflows:
       - dbapi: *requires_base_venvs
       - ddtracerun: *requires_base_venvs
       - django: *requires_base_venvs
+      - django_hosts: *requires_base_venvs
       - djangorestframework: *requires_base_venvs
       - dogpile_cache: *requires_base_venvs
       - elasticsearch: *requires_base_venvs
