Add httpx integration (#2420)
* Add httpx integration

* fix typing issue

* Finish up httpx tests

* fix up docs

* Add release note

* add httpx to docs

* use ext_service

* remove unused import

* fix spell checking

* add missing httpx circleci config

* add helper to get whether distributed tracing is enabled or not

* use machine for httpx

* add httpx to spelling list

* disable distributed tracing for third party test suite

* fix spelling mistake

* Add distributed tracing and service name tests

* add tests for distributed_tracing_enabled

* update env name

* fix env name

* make sure to start httpbin_local

* skip header tests

* disabled distributed tracing for httpx third party integration test suite

* fix env

* ensure distributed tracing disabled env works

* fix env variable

* Update .github/workflows/httpx.yml

Co-authored-by: Brett Langdon <brett.langdon@datadoghq.com>

* Apply suggestions from code review

Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>

* use get_argument_value helper

* Revert added tests, they are added now in #2712

* helper change moved to #2712

* update based on comments

* address review comments

* remove unused import

* remove unused import

* Add test for patching/unpatching

* support Pin usage

* remove unused import

* add missing word to dict

Co-authored-by: Tahir H. Butt <tahir.butt@datadoghq.com>
Co-authored-by: Gabriele N. Tornetta <P403n1x87@users.noreply.github.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -619,12 +619,6 @@ jobs:
       - run_tox_scenario:
           pattern: '^gevent_contrib-'
 
-  httplib:
-    <<: *contrib_job
-    steps:
-      - run_tox_scenario:
-          pattern: '^httplib_contrib'
-
   grpc:
     <<: *machine_executor
     parallelism: 6
@@ -632,6 +626,20 @@ jobs:
       - run_test:
           pattern: "grpc"
           snapshot: true
+
+  httplib:
+    <<: *contrib_job
+    steps:
+      - run_tox_scenario:
+          pattern: '^httplib_contrib'
+
+  httpx:
+    <<: *machine_executor
+    steps:
+      - run_test:
+          pattern: 'httpx'
+          snapshot: true
+          docker_services: 'httpbin_local'
 
   mariadb:
     <<: *machine_executor
@@ -955,6 +963,7 @@ requires_tests: &requires_tests
     - gevent
     - grpc
     - httplib
+    - httpx
     - integration_agent5
     - integration_agent
     - integration_testagent
@@ -1038,6 +1047,7 @@ workflows:
       - gevent: *requires_base_venvs
       - grpc: *requires_base_venvs
       - httplib: *requires_base_venvs
+      - httpx: *requires_base_venvs
       - integration_agent5: *requires_base_venvs
       - integration_agent: *requires_base_venvs
       - integration_testagent: *requires_base_venvs
