--- a/benchmarks/encoder/config.yaml
+++ b/benchmarks/encoder/config.yaml
@@ -4,6 +4,7 @@ one-trace: &base_variant
   ntags: 0
   ltags: 0
   nmetrics: 0
+  dd_origin: false
 many-traces:
   <<: *base_variant
   ntraces: 100
@@ -21,3 +22,17 @@ one-metric:
 many-metrics:
   <<: *base_variant
   nmetrics: 48
+one-trace-with-dd-origin:
+  <<: *base_variant
+  ntags: 10
+  ltags: 16
+  dd_origin: true
+one-trace-with-dd-origin-no-tags:
+  <<: *base_variant
+  dd_origin: true
+many-traces-with-dd-origin:
+  <<: *base_variant
+  ntraces: 100
+  ntags: 10
+  ltags: 16
+  dd_origin: true
